--- a/views/layout/adminHeader.ejs
+++ b/views/layout/adminHeader.ejs
@@ -11,10 +11,10 @@
         <div class="topHeader">
             <a href="/admin/logout" class="Thenga" title="Logout"><div class="left" ><i class="bi text-danger bi-box-arrow-left ms-5 me-2"></i></div></a>
             <div class="center text-center RAREADMIN" style="text-shadow: 1px 1px rgba(255, 255, 255, 0.274);">
-              <a href="/user/home/">RARE KICK'S</a>
+              <a href="/user/home/"><span class="RAREADMIN">RARE KICK'S</span></a>
           </div>
             <div class="right">
-                <a href="" class="Manga" onclick="handleButtonClick()" id="button"><i class="bi bi-arrow-clockwise me-5 text-dark"></i></a>
+                <a href="" class="Manga" onclick="handleButtonClick()" id="button"><i class="bi bi-arrow-clockwise me-5 text-danger"></i></a>
             </div>
         </div>
         <div class="bottomHeader container mb-3 ">
