--- a/views/user/homePage.ejs
+++ b/views/user/homePage.ejs
@@ -8,9 +8,9 @@
         <!-- <h2 class="text-center mb-4" style="  font-family: 'Michroma', sans-serif;">Hei there!</h2> -->
         <div class="row">
             <div class="col-12 imageContainer" id="imageContainer1">
-                <img src="../../public/images/fachry-zella-devandra-bNSdIkCBJOs-unsplash.jpg" class="img-fluid firstImage" alt="..." style="border-radius: 20px; border: 1px solid black;">
+                <img src="../../public/images/people-collaborating-with-tech- (1).png" class="img-fluid firstImage" alt="..." style="border-radius: 20px; ">
                 <div class="imageText">
-              <h1 class="text-center"><u>New Collections</u></h1>
+              <h1 class="text-center">New Collections</h1>
               <p>" Step into style with our latest arrivals! Explore our shoe store's freshest collection, featuring trendy designs, comfort, and quality that will keep you walking in confidence. Discover the perfect pair to elevate your every step ”</p>
             </div>
         </div>
