--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,6 +1,5 @@
 .header{
     position: sticky;
-    
     background: linear-gradient(#2b2e2f,#414345) ;
     border-top: 0.7px solid black;
     /* border-bottom-left-radius:30px ;
@@ -18,7 +17,7 @@
 
 .header i:hover{
     color: white;
-    transition: 0.25s;
+    transition: 0.5s;
 }
 h3 {
     overflow-wrap: break-word;
@@ -67,7 +66,7 @@ h5 {
     }
     .header{
         height: 300px;
-        padding-bottom: 410px;
+        padding-bottom: 300px;
     }
     .header2{
         height: 300px;
@@ -79,20 +78,25 @@ h5 {
         height: 100px;
     }
   }
-@media(max-width:403px){
+@media(max-width:443px){
     .bottomHeader{
         flex-direction: column;
         justify-content: center;
         align-items: center;
     }
     .header,.header2{
-        height: 400px !important;
+        height: 420px !important;
     }
     .coverdiv{
         height: 20px;
     }
     .bottomCover{
         height: 130px;
+    }
+  }
+@media(max-width:1096px){
+    .header,.header2{
+        height: 200px;
     }
   }
 
@@ -143,7 +147,7 @@ h5 {
 }
 
 .RARE{
-    padding-left: 100px;
+    padding-left: 200px;
 }
 
 
@@ -164,7 +168,7 @@ h5 {
         padding-left: 30px;
     }
     .header,.header2{
-        height: 350px;
+        height: 370px;
     }
     .left, .right {
         padding-left: 0px;
@@ -285,4 +289,13 @@ h5 {
  box-shadow: rgb(93 24 220) 0px 0px 0px 0px;
  transform: translateY(10px);
  transition: 100ms;
+}
+
+.profileIcon{
+    border-radius: 100%;
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgba(218, 218, 218, 0.406);
+    box-shadow: 0px 0px 15px rgb(0, 0, 0);
+    padding: 0px 10.2px 2px 10.4px;
+    color: rgb(0, 0, 0);
 }
