--- a/public/template/invoice.ejs
+++ b/public/template/invoice.ejs
@@ -7,7 +7,7 @@
 
     <style>
         body {
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: Helvetica, sans-serif;
             margin: 100px;
             padding: 100px;
             border: 1px solid rgb(92, 92, 92);
@@ -63,7 +63,8 @@
     </style>
 </head>
 <body>
-    <h1>Invoice</h1>
+    <h1 ><u>Invoice</u></h1>
+    <img src="data:image/jpeg;base64,{<%=base64str%>}" alt="Company Logo" width="100" height="100" style="border-radius: 10px;">
 
     <address>
         <h2>Rare Kicks</h2>
