--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -135,7 +135,7 @@
                 <a href="/user/cart/" class=""><i class="bi bi-bag-fill"></i></i></i</a>
                 <span class="cartCount" id="cartCount"></span></div>
                 <span class="profileMan">
-                <a class="text-dark " data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><i class="bi bi-person-circle " style="color: black; text-shadow: 1px 1px rgba(255, 255, 255, 0.321); font-size: 50px; cursor: pointer;"></i></i</a></span>
+                <a class="text-dark " data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop" aria-controls="staticBackdrop"><i class="profileIcon text-center bi bi-person-circle " style=" font-size: 50px; cursor: pointer;"></i></i</a></span>
                
             </div>
         </div>
