--- a/views/user/checkOut.ejs
+++ b/views/user/checkOut.ejs
@@ -91,7 +91,8 @@ input:checked[type="checkbox"]:before {
 <script>
     let grandTotal="<%=grandTotal%>"
     let discount=0;
-    let walletBalance="<%=user.wallet.balance%>"
+    const walBal="<%=user.wallet.balance%>"
+    let walletBalance=parseInt(walBal)
 </script>
 
     <div class="container productCont" style="margin-top: 10px; border: none; background-color: #ffffff; ">
@@ -432,9 +433,9 @@ input:checked[type="checkbox"]:before {
                                     const deductionAmount = total > walletBalance ? walletBalance : total;
                                     const balance = walletBalance - deductionAmount;
                                     amountElement.textContent = balance > 0 ? (balance).toFixed(2) : 0;
-                                    usedWallet.textContent = deductionAmount;
+                                    usedWallet.textContent = deductionAmount.toFixed(2);
                                     totalAmount.textContent=(total-deductionAmount).toFixed(2);
-                                    totalPrice.textContent=(total-deductionAmount).toFixed(2);
+                                    totalPrice.textContent=(total-deductionAmount).toFixed(0);
                                     if((total-deductionAmount)===0){
                                         payNowButton.setAttribute('style', 'display: none !important;');
                                         placeOrderCOD.setAttribute('style', 'display: none !important;');
@@ -443,10 +444,10 @@ input:checked[type="checkbox"]:before {
                                         placeOrderCOD.style.display='block';
                                     }
                                 } else {
-                                    amountElement.textContent = walletBalance;
+                                    amountElement.textContent = walletBalance.toFixed(2);
                                     usedWallet.textContent = 0;
-                                    totalAmount.textContent=total;
-                                    totalPrice.textContent=total;
+                                    totalAmount.textContent=total.toFixed(2);
+                                    totalPrice.textContent=total.toFixed(2);
                                     payNowButton.style.display='block';
                                     placeOrderCOD.style.display='block';
                                 }
