--- a/views/user/detailedProduct.ejs
+++ b/views/user/detailedProduct.ejs
@@ -95,7 +95,7 @@
 <body>
     <%- include('../layout/header')-%>
     <div class="container" style="margin-top: 20px;">
-        <div class="row" style="border: 1px solid black; border-radius: 20px; ">
+        <div class="row" style="border: 1px solid rgb(173, 173, 173); border-radius: 20px; ">
             <div class="col-12 col-xl-7 col-lg-12 p-2 d-flex align-items-center">
                 <div class="row g-2 w-100">
                     <% if (product?.images && product?.images.length === 1) { %>
