--- a/views/admin/brandBasedAdmin.ejs
+++ b/views/admin/brandBasedAdmin.ejs
@@ -1,5 +1,6 @@
 <%- include('../layout/headerHTML')-%>
 <link rel="stylesheet" type="text/css" href="../../public/css/adminHome.css">
+<link rel="stylesheet" type="text/css" href="../../public/css/card.css">
 
 </head>
 <body>
@@ -22,7 +23,7 @@
                 </div>
             </div>
         </div>
-      <div class="container mt-5 border rounded p-4">
+      <div class="container mt-5  p-4">
             <h2 style="font-family: 'Michroma', sans-serif;">Products</h2>
             
             <div class="d-flex justify-content-center text-center mt-2"> 
@@ -46,7 +47,7 @@
 
     <% brandsData?.forEach(brand => { %>
                   <div class="col">
-                    <div class="card h-100 mb-3 pb-2">
+                    <div class=" h-100 mb-3 pb-2">
                       <h2 class="card-title text-center mt-3 mb-2" style="font-family: 'Michroma', sans-serif;"><%= brand._id %></h2>
               
                       
@@ -57,7 +58,7 @@
                 <% brand.products.forEach(product=>{%>
      
                   <div class="col">
-                    <div class="card h-100" style="border: 1px solid rgba(51, 51, 51, 0.567); border-radius: 20px; box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.608); ">
+                    <div class="card h-100" style="">
                     <a href="/admin/productDetailed?id=<%=product._id%>" style="padding-right: 10px; margin: 0px;">
                       <img src="../../public/productImages/<%= product.images[0] %>" class="image-fluid" alt="..." style="border-radius: 20px; margin: 5px; max-width: 100%; height: auto; object-fit: contain;">
                      </a> 
@@ -72,7 +73,7 @@
                         <span class="card-title d-block text-center mt-2"><span style="font-size: 17px; font-weight: 700;"><u>Description</u></span></span>
                         <p class="card-text ps-2 pe-2 pb-2"><%= product.description%></p>
                       </div>
-                      <div class="card-footer d-flex" style="justify-content: end; gap: 10px; background-color: #ebebebc0; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
+                      <div class="card-footer d-flex" style="justify-content: end; gap: 10px; background-color: #ebebeb00; border-bottom-left-radius: 20px; border-bottom-right-radius: 20px;">
                           <a href="/admin/editProduct?id=<%=product._id%>" class="btn btn-dark rounded-pill px-3"><i class="fa-solid fa-pencil"></i></a>
                           <a href="/admin/deleteProduct?id=<%=product._id%>" class="btn btn-warning rounded-pill px-3" id="button" onclick="handleButtonClick()" ><%=product.deleted?"Show":"Hide"; %></a>
                         </div>
